# ava_companion

./: .gitignore  README.md  pyproject.toml
qdrant_storage/: raft_state.json
src/ai_companion/: __init__.py  settings.py
src/ai_companion/lab/: edge.py  exceptions.py  graph.py  helpers.py  image_to_text.py  memory_manager.py  nodes.py  prompts.py  schedules.py  speech_to_text.py  state.py  text_to_image.py  text_to_speech.py  vector_store.py
