[project]
name = "ai-companion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Monesh Rallapalli", email = "moneshrallapalli@gmail.com"}, 
    { name = "Mouryan Jayashankar", email = "mouryanj2001@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=2.57.0",
    "groq>=0.37.1",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "together>=2.22.1",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
